--- a/src/sass/themes/clouds-midnight.scss
+++ b/src/sass/themes/clouds-midnight.scss
@@ -1,42 +1,42 @@
-$foreground: #929292;
+body.theme-cloudsMidnight {
+  $foreground: #929292;
 
-body {
   background-color: #191919;
   color: $foreground;
-}
 
-::selection {
-  background-color: black;
-}
+  ::selection {
+    background-color: black;
+  }
 
-.key {
-  color: $foreground;
-}
+  .key {
+    color: $foreground;
+  }
 
-.number {
-  color: #46a609;
-}
+  .number {
+    color: #46a609;
+  }
 
-.string {
-  color: #5d90cd;
-}
+  .string {
+    color: #5d90cd;
+  }
 
-.bool, .null {
-  color: #39946a;
-}
+  .bool, .null {
+    color: #39946a;
+  }
 
-.brace {
-  color: $foreground;
-}
+  .brace {
+    color: $foreground;
+  }
 
-#gutter {
-  background: #232323;
-}
+  #gutter {
+    background: #232323;
+  }
 
-[line-number]:before {
-  color: $foreground;
-}
+  [line-number]:before {
+    color: $foreground;
+  }
 
-.collapsed:after {
-  color: #3c403b;
+  .collapsed:after {
+    color: #3c403b;
+  }
 }
