--- a/src/sass/themes/clouds.scss
+++ b/src/sass/themes/clouds.scss
@@ -1,42 +1,42 @@
-$foreground: black;
+body.theme-clouds {
+  $foreground: black;
 
-body {
   background-color: white;
   color: $foreground;
-}
 
-::selection {
-  background-color: #bdd5fc;
-}
+  ::selection {
+    background-color: #bdd5fc;
+  }
 
-.key {
-  color: $foreground;
-}
+  .key {
+    color: $foreground;
+  }
 
-.number {
-  color: #46a609;
-}
+  .number {
+    color: #46a609;
+  }
 
-.string {
-  color: #5d90cd;
-}
+  .string {
+    color: #5d90cd;
+  }
 
-.bool, .null {
-  color: #39946a;
-}
+  .bool, .null {
+    color: #39946a;
+  }
 
-.brace {
-  color: $foreground;
-}
+  .brace {
+    color: $foreground;
+  }
 
-#gutter {
-  background: #ebebeb;
-}
+  #gutter {
+    background: #ebebeb;
+  }
 
-[line-number]:before {
-  color: #333;
-}
+  [line-number]:before {
+    color: #333;
+  }
 
-.collapsed:after {
-  color: #bcc8ba;
+  .collapsed:after {
+    color: #bcc8ba;
+  }
 }
