--- a/src/sass/themes/idle-fingers.scss
+++ b/src/sass/themes/idle-fingers.scss
@@ -1,39 +1,39 @@
-$foreground: white;
+body.theme-idleFingers {
+  $foreground: white;
 
-body {
   background-color: #323232;
   color: $foreground;
-}
 
-::selection {
-  background-color: transparentize(#5a647e, 0.12);
-}
+  ::selection {
+    background-color: transparentize(#5a647e, 0.12);
+  }
 
-.key {
-  color: $foreground;
-}
+  .key {
+    color: $foreground;
+  }
 
-.number, .bool, .null {
-  color: #6c99bb;
-}
+  .number, .bool, .null {
+    color: #6c99bb;
+  }
 
-.string {
-  color: #a5c261;
-}
+  .string {
+    color: #a5c261;
+  }
 
-.brace {
-  color: $foreground;
-}
+  .brace {
+    color: $foreground;
+  }
 
-#gutter {
-  background: #3b3b3b;
-}
+  #gutter {
+    background: #3b3b3b;
+  }
 
-[line-number]:before {
-  color: #999;
-}
+  [line-number]:before {
+    color: #999;
+  }
 
-.collapsed:after {
-  font-style: italic;
-  color: #bc9458;
+  .collapsed:after {
+    font-style: italic;
+    color: #bc9458;
+  }
 }
