--- a/src/sass/themes/iplastic.scss
+++ b/src/sass/themes/iplastic.scss
@@ -1,41 +1,41 @@
-$foreground: #333;
+body.theme-iplastic {
+  $foreground: #333;
 
-body {
   background-color: #eee;
   color: $foreground;
-}
 
-::selection {
-  background-color: #bad6fd;
-}
+  ::selection {
+    background-color: #bad6fd;
+  }
 
-.key {
-  color: #36c;
-  font-style: italic;
-}
+  .key {
+    color: #36c;
+    font-style: italic;
+  }
 
-.number, .bool, .null {
-  color: #06f;
-  font-weight: 700;
-}
+  .number, .bool, .null {
+    color: #06f;
+    font-weight: 700;
+  }
 
-.string {
-  color: #a55f03;
-}
+  .string {
+    color: #a55f03;
+  }
 
-.brace {
-  color: $foreground;
-}
+  .brace {
+    color: $foreground;
+  }
 
-#gutter {
-  background: #ddd;
-}
+  #gutter {
+    background: #ddd;
+  }
 
-[line-number]:before {
-  color: #666;
-}
+  [line-number]:before {
+    color: #666;
+  }
 
-.collapsed:after {
-  color: #777;
-  font-style: italic;
+  .collapsed:after {
+    color: #777;
+    font-style: italic;
+  }
 }
