--- a/src/sass/themes/merbivore-soft.scss
+++ b/src/sass/themes/merbivore-soft.scss
@@ -1,43 +1,43 @@
-$foreground: #e6e1dc;
+body.theme-merbivoreSoft {
+  $foreground: #e6e1dc;
 
-body {
   background-color: #1c1c1c;
   color: $foreground;
-}
 
-::selection {
-  background-color: #494949;
-}
+  ::selection {
+    background-color: #494949;
+  }
 
-.key {
-  color: $foreground;
-}
+  .key {
+    color: $foreground;
+  }
 
-.number {
-  color: #7fc578;
-}
+  .number {
+    color: #7fc578;
+  }
 
-.string {
-  color: #8ec65f;
-}
+  .string {
+    color: #8ec65f;
+  }
 
-.bool, .null {
-  color: #e1c582;
-}
+  .bool, .null {
+    color: #e1c582;
+  }
 
-.brace {
-  color: $foreground;
-}
+  .brace {
+    color: $foreground;
+  }
 
-#gutter {
-  background: #262424;
-}
+  #gutter {
+    background: #262424;
+  }
 
-[line-number]:before {
-  color: $foreground;
-}
+  [line-number]:before {
+    color: $foreground;
+  }
 
-.collapsed:after {
-  font-style: italic;
-  color: #ac4bb8;
+  .collapsed:after {
+    font-style: italic;
+    color: #ac4bb8;
+  }
 }
