--- a/src/sass/themes/tomorrow-night.scss
+++ b/src/sass/themes/tomorrow-night.scss
@@ -1,38 +1,38 @@
-$foreground: #c5c8c6;
+body.theme-tomorrowNight {
+  $foreground: #c5c8c6;
 
-body {
   background-color: #1d1f21;
   color: $foreground;
-}
 
-::selection {
-  background-color: #373b41;
-}
+  ::selection {
+    background-color: #373b41;
+  }
 
-.key {
-  color: #c66;
-}
+  .key {
+    color: #c66;
+  }
 
-.number, .bool, .null {
-  color: #de935f;
-}
+  .number, .bool, .null {
+    color: #de935f;
+  }
 
-.string {
-  color: #b5bd68;
-}
+  .string {
+    color: #b5bd68;
+  }
 
-.brace {
-  color: $foreground;
-}
+  .brace {
+    color: $foreground;
+  }
 
-#gutter {
-  background: #25282c;
-}
+  #gutter {
+    background: #25282c;
+  }
 
-[line-number]:before {
-  color: $foreground;
-}
+  [line-number]:before {
+    color: $foreground;
+  }
 
-.collapsed:after {
-  color: #969896;
+  .collapsed:after {
+    color: #969896;
+  }
 }
