--- a/src/sass/themes/chrome.scss
+++ b/src/sass/themes/chrome.scss
@@ -1,42 +1,42 @@
-$foreground: black;
+body.theme-chrome {
+  $foreground: black;
 
-body {
   background-color: white;
   color: $foreground;
-}
 
-::selection {
-  background-color: #b5d5ff;
-}
+  ::selection {
+    background-color: #b5d5ff;
+  }
 
-.key {
-  color: #318495;
-}
+  .key {
+    color: #318495;
+  }
 
-.number {
-  color: #0000cd;
-}
+  .number {
+    color: #0000cd;
+  }
 
-.string {
-  color: #1a1aa6;
-}
+  .string {
+    color: #1a1aa6;
+  }
 
-.bool, .null {
-  color: #6d79de;
-}
+  .bool, .null {
+    color: #6d79de;
+  }
 
-.brace {
-  color: $foreground;
-}
+  .brace {
+    color: $foreground;
+  }
 
-#gutter {
-  background: #ebebeb;
-}
+  #gutter {
+    background: #ebebeb;
+  }
 
-[line-number]:before {
-  color: #333;
-}
+  [line-number]:before {
+    color: #333;
+  }
 
-.collapsed:after {
-  color: #236e24;
+  .collapsed:after {
+    color: #236e24;
+  }
 }
