--- a/src/sass/themes/gob.scss
+++ b/src/sass/themes/gob.scss
@@ -1,39 +1,39 @@
-$foreground: #0f0;
+body.theme-gob {
+  $foreground: #0f0;
 
-body {
   background-color: #0b0b0b;
   color: $foreground;
-}
 
-::selection {
-  background-color: transparentize(#ddf0ff, 0.80);
-}
+  ::selection {
+    background-color: transparentize(#ddf0ff, 0.80);
+  }
 
-.key {
-  color: #00f868;
-}
+  .key {
+    color: #00f868;
+  }
 
-.string {
-  color: #10f060;
-}
+  .string {
+    color: #10f060;
+  }
 
-.bool, .null {
-  color: #10f0a0;
-}
+  .bool, .null {
+    color: #10f0a0;
+  }
 
-.brace {
-  color: $foreground;
-}
+  .brace {
+    color: $foreground;
+  }
 
-#gutter {
-  background: #0b1818;
-}
+  #gutter {
+    background: #0b1818;
+  }
 
-[line-number]:before {
-  color: #03ee03;
-}
+  [line-number]:before {
+    color: #03ee03;
+  }
 
-.collapsed:after {
-  font-style: italic;
-  color: #00e060;
+  .collapsed:after {
+    font-style: italic;
+    color: #00e060;
+  }
 }
