--- a/src/sass/themes/textmate.scss
+++ b/src/sass/themes/textmate.scss
@@ -1,42 +1,42 @@
-$foreground: black;
+body.theme-textmate {
+  $foreground: black;
 
-body {
   background-color: #fff;
   color: $foreground;
-}
 
-::selection {
-  background-color: #b5d5ff;
-}
+  ::selection {
+    background-color: #b5d5ff;
+  }
 
-.key {
-  color: #318495;
-}
+  .key {
+    color: #318495;
+  }
 
-.number {
-  color: #0000cd;
-}
+  .number {
+    color: #0000cd;
+  }
 
-.string {
-  color: #036a07;
-}
+  .string {
+    color: #036a07;
+  }
 
-.bool, .null {
-  color: #585cf6;
-}
+  .bool, .null {
+    color: #585cf6;
+  }
 
-.brace {
-  color: $foreground;
-}
+  .brace {
+    color: $foreground;
+  }
 
-#gutter {
-  background: #f0f0f0;
-}
+  #gutter {
+    background: #f0f0f0;
+  }
 
-[line-number]:before {
-  color: #333;
-}
+  [line-number]:before {
+    color: #333;
+  }
 
-.collapsed:after {
-  color: #4c886b;
+  .collapsed:after {
+    color: #4c886b;
+  }
 }
