--- a/src/sass/themes/twilight.scss
+++ b/src/sass/themes/twilight.scss
@@ -1,39 +1,39 @@
-$foreground: #f8f8f8;
+body.theme-twilight {
+  $foreground: #f8f8f8;
 
-body {
   background-color: #141414;
   color: $foreground;
-}
 
-::selection {
-  background-color: transparentize(#ddf0ff, 0.8);
-}
+  ::selection {
+    background-color: transparentize(#ddf0ff, 0.8);
+  }
 
-.key {
-  color: #7587a6;
-}
+  .key {
+    color: #7587a6;
+  }
 
-.number, .bool, .null {
-  color: #cf6a4c;
-}
+  .number, .bool, .null {
+    color: #cf6a4c;
+  }
 
-.string {
-  color: #8f9d6a;
-}
+  .string {
+    color: #8f9d6a;
+  }
 
-.brace {
-  color: $foreground;
-}
+  .brace {
+    color: $foreground;
+  }
 
-#gutter {
-  background: #232323;
-}
+  #gutter {
+    background: #232323;
+  }
 
-[line-number]:before {
-  color: #e2e2e2;
-}
+  [line-number]:before {
+    color: #e2e2e2;
+  }
 
-.collapsed:after {
-  font-style: italic;
-  color: #5f5a60;
+  .collapsed:after {
+    font-style: italic;
+    color: #5f5a60;
+  }
 }
