--- a/sass/content.scss
+++ b/sass/content.scss
@@ -1,6 +1,7 @@
 /*@charset "utf-8";*/
 
 body {
+  background: #fff;
   -webkit-user-select: text ;
   overflow-y: scroll !important ;
   margin: 0 ;
